2008-08-24  Dodji Seketeli  <dodji@gnome.org>

	* index.html: Fix encoding specification to make sure the page is
	  valid xhtml. Add validation checker icon.

2008-08-24  Dodji Seketeli  <dodji@gnome.org>

	* index.html: Slightly changed the name.

2008-07-31  Dodji Seketeli  <dodji@gnome.org>

	* index.html: update for 0.6.1

2008-07-30  Dodji Seketeli  <dodji@gnome.org>

	* index.html: update for 0.6.0

2008-05-26 Dodji Seketeli <dodji@gnome.org>

	* index.html: update for 0.5.3

2008-04-6 Dodji Seketeli <dodji@gnome.org>

	* index.html: update for 0.5.2, copyright.

2008-03-16 Dodji Seketeli <dodji@gnome.org>

	* index.html: update for 0.5.0

2007-12-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* default.css: explicitly specify the background color for the entire body,
	so that it still looks good if people specify different default backgrounds
	in their browser

2007-06-03  Jonathon Jongsma  <jjongsma@gnome.org>

	* index.html: Update for the 0.4.0 release.  Also change the layout of the
	page slightly.  Add the logo icon and use the color from the icon for the
	link color.
	* default.css: change style a bit

Mon, 23 Apr 2007 08:25:44 +0200 Dodji Seketeli

	* index.html: svn co should now be made out of GNOME svn.
	  Also make the file valid against the dtd it is associated with.

Sun, 22 Apr 2007 17:00:43 +0200 Dodji Seketeli

	* index.html:  nemiver is now in the GNOME svn.

Sun, 21 Jan 2007 17:55:50 +0100 Dodji Seketeli

	* index.html: update the About part.

Sun, 21 Jan 2007 17:44:38 +0100 Dodji Seketeli

	* index.html: update for 0.3.0

Sun, 17 Dec 2006 15:32:35 +0100 Dodji Seketeli

	* index.html: update project description

Wed, 13 Dec 2006 23:32:48 +0100 Dodji Seketeli

	* index.html: update for 0.2.0

Wed, 06 Dec 2006 17:36:44 +0100 Dodji Seketeli

	* index.html: added a 'File a bug' link.

Mon, 04 Dec 2006 10:23:28 +0100 Dodji Seketeli

	* index.html: fix a typo

2006-12-03  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
