@@ -101,18 +101,19 @@
         </p>
     </div>
 
+    <div>
+         <p>
+             <a href="http://validator.w3.org/check?uri=referer">
+                 <img src="http://www.w3.org/Icons/valid-xhtml10"
+                      alt="Valid XHTML 1.0 Strict"
+                      height="31"
+                      width="88"/>
+              </a>
+        </p>
+    </div>
+
     <div id="bottom">
         <div id="copyright">Copyright 2008, <a href="http://home.gna.org/nemiver">The Nemiver project</a>. </div>
-        <div>
-             <p>
-                 <a href="http://validator.w3.org/check?uri=referer">
-                     <img src="http://www.w3.org/Icons/valid-xhtml10"
-                          alt="Valid XHTML 1.0 Strict"
-                          height="31"
-                          width="88"/>
-                  </a>
-            </p>
-        </div>
     </div>
 </body>
 </html>
