@@ -1,5 +1,9 @@
 2008-08-24  Dodji Seketeli  <dodji@gnome.org>
 
+	* index.html: Fix validation checker link position.
+
+2008-08-24  Dodji Seketeli  <dodji@gnome.org>
+
 	* index.html: Fix encoding specification to make sure the page is
 	  valid xhtml. Add validation checker icon.
 
